<resources>
    <string name="app_name">AdminApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="two_wheeler">Two Wheeler</string>
    <string name="four_wheeler">Four Wheeler</string>
    <string name="add">Add</string>
    <string name="zonal_name">Zonal name</string>
    <string name="zonal_address">Address</string>
    <string name="police_name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="police_id">Police ID</string>
    <string name="zonal">Select Zonal</string>
    <string name="name">Person Name</string>
    <string name="address">Address</string>
    <string name="extraAmount">Extra Amount</string>
    <string name="extraAmountreason">Reason</string>
    <string name="vehiclenumber">Vehicle Number</string>
    <string name="towingarea">Towing Area</string>
    <string name="zonalofficer">Zonal Officer</string>
    <string name="totalamount">Total Amount</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
</resources>
