<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    app:cardElevation="10dp"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <ImageView
                android:id="@+id/row_layout_receive_vehicle_document"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:scaleType="center" />

            <ImageView
                android:id="@+id/row_layout_receive_vehicle_person"

                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:scaleType="center" />
        </LinearLayout>


        <TextView
            android:id="@+id/row_layout_receive_vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_person"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorAccent" />


        <TextView
            android:id="@+id/row_layout_receive_vehicle_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/row_layout_receive_vehicle_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_mobile"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/mobile"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/row_layout_receive_vehicle_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_zonal"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/row_layout_receive_vehicle_extra_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_fine_amount"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/extraAmount"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/row_layout_receive_vehicle_extra_amount_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_reason"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/extraAmountreason"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/row_layout_receive_vehicle_extra_amount_total_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_fine_amount"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/totalamount"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/row_layout_receive_vehicle_extra_amount_total_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_date"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/row_layout_receive_vehicle_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/vnumber"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/vehiclenumber"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/row_layout_receive_vehicle_towin_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/towingarea"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/row_layout_receive_vehicle_zonal_officer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/zonalofficer"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

</android.support.v7.widget.CardView>