<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ZonalOfficerTransferActivity">

    <Spinner
        android:id="@+id/activity_zonal_officer_transfer_officer_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:prompt="@string/zonalofficer" />


    <Spinner
        android:id="@+id/activity_zonal_officer_transfer_location_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:prompt="@string/zonal" />


    <Button
        android:id="@+id/activity_zonal_officer_transfer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:textColor="@color/colorWhite" />

</LinearLayout>